--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   http: ^0.13.4
-  shared_preferences: ^2.0.13
   google_fonts: ^2.3.1
   intl: ^0.17.0
-  flutter_svg: ^1.0.3
   lottie: ^1.2.2
   pinput: ^2.0.2
   provider: ^6.0.2
@@ -29,7 +27,12 @@ dependencies:
   table_calendar: ^3.0.4
   flutter_staggered_animations: ^1.0.0
   another_flushbar: ^1.10.28
-  animated_bottom_navigation_bar: ^0.3.2
+  flutter_slidable: ^1.2.0
+  image_picker: ^0.8.4+11
+  percent_indicator: ^4.0.0
+  photo_view:
+    git: https://github.com/bluefireteam/photo_view.git
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
