--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.0.13
   carousel_slider: ^4.1.1
   convex_bottom_bar: ^3.0.0
+  dialogflow_flutter: ^1.0.0
+  bubble: ^1.2.1
 
 dev_dependencies:
   flutter_test:
