--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   http: ^0.13.4
-  google_fonts: ^2.3.1
+  google_fonts: ^4.0.4
   intl: ^0.17.0
-  lottie: ^1.2.2
+  lottie: ^2.4.0
   pinput: ^2.0.2
   provider: ^6.0.2
   flutter_local_notifications: ^9.3.2
@@ -27,10 +27,10 @@ dependencies:
   table_calendar: ^3.0.4
   flutter_staggered_animations: ^1.0.0
   another_flushbar: ^1.10.28
-  flutter_slidable: ^1.2.0
+  flutter_slidable: ^3.0.0
   image_picker: ^0.8.4+11
   percent_indicator: ^4.0.0
-  syncfusion_flutter_charts: ^20.1.48
+  syncfusion_flutter_charts: ^21.2.4
   flutter_custom_clippers: ^2.0.0
   photo_view:
     git: https://github.com/bluefireteam/photo_view.git
@@ -41,12 +41,18 @@ dependencies:
   bubble: ^1.2.1
   file: ^6.1.4
   pedometer: ^3.0.0
+  flutter_facebook_auth: ^5.0.11
+  google_sign_in: ^6.1.1
+  dotted_border: ^2.0.0+3
+  flutter_colorpicker: ^1.0.3
+  font_awesome_flutter: ^10.4.0
+  flutter_iconpicker: ^3.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
