--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.per_note">
+
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+
    <application
         android:label="per_note"
         android:name="${applicationName}"
