--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   font_awesome_flutter: ^10.4.0
   flutter_iconpicker: ^3.2.4
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
