--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   google_fonts: ^4.0.4
-  intl: ^0.17.0
+  intl: ^0.18.1
   lottie: ^2.4.0
   pinput: ^2.0.2
   provider: ^6.0.2
@@ -30,7 +30,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   image_picker: ^0.8.4+11
   percent_indicator: ^4.2.3
-  syncfusion_flutter_charts: ^21.2.4
+  syncfusion_flutter_charts: ^22.1.34
   flutter_custom_clippers: ^2.0.0
   photo_view:
     git: https://github.com/bluefireteam/photo_view.git
@@ -46,13 +46,17 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   font_awesome_flutter: ^10.4.0
   flutter_iconpicker: ^3.2.4
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.1
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app-icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
